modifications for JIT